Try to replace subx with useProxy

--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
-<html data-framework="subx">
+<html data-framework="use-proxy">
   <head>
-    <title>SubX • TodoMVC</title>
+    <title>useProxy • TodoMVC</title>
   </head>
   <body>
     <div id="container"></div>
